# CanadianExperience

./: CMakeLists.txt  CanadianExperienceApp.cpp  CanadianExperienceApp.h  Doxyfile.doxy  README.md
CanadianExperienceLib/: Actor.cpp  AnimChannelPoint.cpp  CMakeLists.txt  Drawable.cpp  HaroldFactory.cpp  HeadTop.cpp  ImageDrawable.cpp  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  SpartyFactory.cpp  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp
MachineDemo/: CMakeLists.txt  MachineSystemIsolator.h
MachineLib/: ActualMachine.cpp  ActualMachine.h  Body.cpp  Body.h  CMakeLists.txt  Component.cpp  Component.h  ConcreteMachineSystem.cpp  ConcreteMachineSystem.h  Consts.h  ContactListener.cpp  ContactListener.h  DebugDraw.cpp  DebugDraw.h  IMachineSystem.h  MachineC2Factory.cpp  MachineC2Factory.h  MachineDialog.cpp  MachineDialog.h  MachineStandin.cpp  MachineStandin.h  MachineSystemFactory.cpp  MachineSystemFactory.h  MachineSystemStandin.cpp  MachineSystemStandin.h  PhysicsPolygon.cpp  PhysicsPolygon.h  Polygon.cpp  Polygon.h  pch.h
MachineLib/include/: machine-api.h
MachineTests/: CMakeLists.txt  MachineTest.cpp
Tests/: gtest_main.cpp
resources/xrc/: main.fbp
